# speakeasy

./: AGENTS.md  CHANGELOG.md  CMakeLists.txt  CPP_PORTING_ANALYSIS.md  INHERITANCE.md  PORTING_PLAN.md  PORTING_PROGRESS.md  cc.bat  ccrun.bat  justfile  pyrun.bat  sptest.py  vcpkg.json
.deepseek/: instructions.md
examples/: emu_dll.py  upx_unpack.py
ports/pe-parse/: add-pe-modification-support.patch  portfile.cmake
rust/: .gitignore  CHANGELOG.md  CONVERSION.md  Cargo.toml  DEVELOPMENT.md  HANDOFF.md  INDEX.md  INSTALL.md  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  TODO.md  build.rs  check_err.txt  compare.json  errors.txt  errors3.txt  errors4.txt  errors_refactor.txt  errors_refactor2.txt  errors_refactor3.txt  errors_refactor4.txt
rust/src/: artifacts.rs  binemu.rs  cli.rs  cli_config.rs  common.rs  compare.json  compare.ps1  compare.py  config.rs  errors.rs  lib.rs  memmgr.rs  out.txt  profiler.rs  profiler_events.rs  report.rs  speakeasy.rs  struct.rs  structs.rs  version.rs  volumes.rs
rust/src/engines/: mod.rs  unicorn_eng.rs
rust/src/windows/: com.rs  common.rs  cryptman.rs  driveman.rs  fileman.rs  hammer.rs  ioman.rs  kernel.rs  loaders.rs  mod.rs  netman.rs  objman.rs  regman.rs  sessman.rs  win32.rs  winemu.rs
rust/src/windows/kernel_mods/: kernel_mod.rs  mod.rs  volmgr.rs
rust/src/winenv/: arch.rs  mod.rs
rust/src/winenv/api/: api.rs  gen.ps1  mod.rs  winapi.rs
rust/src/winenv/api/kernelmode/: fwpkclnt.rs  hal.rs  mod.rs  ndis.rs  netio.rs  ntoskrnl.rs  usbd.rs  wdfldr.rs
rust/src/winenv/api/usermode/: advapi32.rs  advpack.rs  bcrypt.rs  bcryptprimitives.rs  com_api.rs  comctl32.rs  crypt32.rs  dnsapi.rs  gdi32.rs  iphlpapi.rs  kernel32.rs  lz32.rs  mod.rs  mpr.rs  mscoree.rs  msi32.rs  msimg32.rs  msvcrt.rs  msvfw32.rs  ncrypt.rs  netapi32.rs  netutils.rs  ntdll.rs  ole32.rs  oleaut32.rs  psapi.rs  rpcrt4.rs  secur32.rs  sfc.rs  sfc_os.rs  shell32.rs  shlwapi.rs  urlmon.rs  user32.rs  winhttp.rs  wininet.rs  winmm.rs  wkscli.rs  ws2_32.rs  wtsapi32.rs
rust/src/winenv/decoys/: mod.rs
rust/src/winenv/defs/: mod.rs  usb.rs  wdf.rs  windef.rs  windows.rs  wininet.rs  wsk.rs
rust/src/winenv/defs/ndis/: mod.rs  ndis.rs
rust/src/winenv/defs/nt/: ddk.rs  mod.rs  ntoskrnl.rs
rust/src/winenv/defs/wfp/: fwpmtypes.rs  mod.rs
rust/src/winenv/defs/windows/: advapi32.rs  com.rs  iphlpapi.rs  kernel32.rs  mod.rs  mpr.rs  netapi32.rs  secur32.rs  shell32.rs  user32.rs  windef.rs  windows.rs
rust/src/winenv/defs/winsock/: mod.rs  winsock.rs  ws2_32.rs
rust/tests/: integration.rs  lib.rs  unit.rs
secpp/: artifacts.cpp  artifacts.h  binemu.cpp  binemu.h  cli.cpp  cli.h  cli_config.cpp  cli_config.h  common.cpp  common.h  config.cpp  config.h  const.h  errors.h  helper.cpp  helper.h  jsapihook.cpp  jsapihook.h  jsemuobj.cpp  jsemuobj.h  jsengine.cpp  jsengine.h  main.cpp  memmgr.cpp  memmgr.h  profiler.cpp  profiler.h  profiler_events.h  quickjspp.hpp  report.h  speakeasy.cpp  speakeasy.h  struct.h  version.h  volumes.cpp  volumes.h
secpp/engines/: unicorn_eng.cpp  unicorn_eng.h
secpp/scylla_wrapper/: ApiReader.cpp  ApiReader.h  Architecture.h  DeviceNameResolver.cpp  DeviceNameResolver.h  IATReferenceScan.cpp  IATReferenceScan.h  IATSearch.cpp  IATSearch.h  ImportRebuilder.cpp  ImportRebuilder.h  NativeWinApi.cpp  NativeWinApi.h  PeParser.cpp  PeParser.h  ProcessAccessHelp.cpp  ProcessAccessHelp.h  ProcessLister.cpp  ProcessLister.h  README.md  SpeakeasyAccess.cpp  SpeakeasyAccess.h  StringConversion.cpp  StringConversion.h  SystemInformation.cpp  SystemInformation.h  Thunks.cpp  Thunks.h  mnemonics.h  platform_linux.h  scylla_wrapper.cpp  scylla_wrapper.h  scylla_wrapper.vcxproj  scylla_wrapper.vcxproj.filters  stdafx.cpp  stdafx.h  targetver.h
secpp/scylla_wrapper/include/: scylla_wrapper.h
secpp/windows/: com.cpp  com.h  common.cpp  common.h  cryptman.cpp  cryptman.h  driveman.cpp  driveman.h  fileman.cpp  fileman.h  hammer.cpp  hammer.h  ioman.cpp  ioman.h  kernel.cpp  kernel.h  loaders.cpp  loaders.h  netman.cpp  netman.h  objman.cpp  objman.h  regdefs.h  regman.cpp  regman.h  sessman.cpp  sessman.h  win32.cpp  win32.h  winemu.cpp  winemu.h
secpp/windows/kernel_mods/: kernel_mod.h  volmgr.cpp  volmgr.h
secpp/winenv/: arch.h
secpp/winenv/api/: api.cpp  api.h  api_handler_registry.h  winapi.cpp  winapi.h  winapi_registration.cpp
secpp/winenv/api/kernelmode/: fwpkclnt.cpp  fwpkclnt.h  hal.cpp  hal.h  ndis.cpp  ndis.h  netio.cpp  netio.h  ntoskrnl.cpp  ntoskrnl.h  (+6 more)
secpp/winenv/deffs/: defs_new_compat.h  usb.h  wdf.h  wininet.h  wsk.h
secpp/winenv/defs/: emu_structs_new.h  usb.h  wdf.h  wininet.h  wsk.h
speakeasy/: binemu.cpp  binemu.py  cli.py  common.cpp  common.h  common.py  config.py  memmgr.h  memmgr.py  profiler.cpp  profiler.py  speakeasy.py  version.h
speakeasy/engines/: unicorn_eng.h  unicorn_eng.py
speakeasy/windows/: common.py  cryptman.h  fileman.py  hammer.cpp  kernel.py  loaders.py  netman.h  objman.h  objman.py  regman.cpp  regman.h  sessman.h  win32.py  winemu.cpp  winemu.py
speakeasy/winenv/: arch.h
speakeasy/winenv/api/: api.cpp  api.h  api_handler_registry.h
tests/: pma_harness.h  pma_profiles.h  smoke_test.cpp  test_argv.cpp  test_artifact_store.cpp  test_cli_config.cpp  test_cli_runtime_flags.cpp  test_config.cpp  test_config_memory_dumps.cpp  test_coverage.cpp  test_dlls.cpp  test_emu_struct_helper.cpp  test_error_context.cpp  test_examples.cpp  test_file_access.cpp  test_filename_override.cpp  test_find_files.cpp  test_gdb.cpp  test_get_proc_address.cpp  test_helper.h  test_js_engine.cpp  test_js_hook.cpp  test_kernel_bootstrap.cpp  test_leak_detector.cpp  test_loaders.cpp  test_map_view_of_file.cpp  test_memory_capture.cpp  test_module_name_normalization.cpp  test_module_system.cpp  test_module_system.py  test_pma_samples.cpp  test_porting.cpp  test_porting_artifact_store.cpp  test_porting_config.cpp  test_porting_jitpe.cpp  test_porting_loaders.cpp  test_porting_memmgr.cpp  test_porting_module_name.cpp  test_porting_ntdefs.cpp  test_porting_pefile.cpp  (+18 more)
tests/js/: hook_gpa.js
(+120 files in other folders)
